--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,42 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .component-px {
-  @apply px-6 sm:px-12 md:px-16 lg:px-32 xl:px-48;
+  @apply px-6 sm:px-12 md:px-16 lg:px-32;
+}
+
+.component-py {
+  @apply py-8 lg:py-16;
+}
+
+.cl-internal-1j7ahlv {
+  width: 2.5rem !important;
+  height: 2.5rem !important;
+}
+
+/* Tailwind custom animation */
+.marquee {
+  position: relative;
+  width: 100vw;
+  max-width: 100%;
+  height: 200px;
+  overflow-x: hidden;
+}
+
+.track {
+  position: absolute;
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 32s linear infinite;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-50%);
+  }
 }
