--- a/app/globals.css
+++ b/app/globals.css
@@ -106,3 +106,8 @@
 .swiper-button-next {
   right: 10px !important; /* Adjust the position if needed */
 }
+
+.ant-select-outlined:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover .ant-select-selector {
+  border-color: #000000 !important;
+}
+
